@@ -79,6 +79,8 @@
     <configuration>
                 <compilerArgs>
                     <arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                    <arg>--add-exports=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED</arg>
+                    <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                 </compilerArgs>
             </configuration>
 </plugin>
